--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "rss-parser": "^3.13.0"
+    "react-slick": "^0.30.2",
+    "rss-parser": "^3.13.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
