--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "rss-parser": "^3.13.0",
+    "sanitize-html": "^2.13.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
