--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "Express": "^3.0.1",
     "framer-motion": "^11.11.10",
     "parser": "^0.1.4",
     "react": "^18.3.1",
