--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "server.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,8 +12,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "npm:Express@^3.0.1",
-    "Express": "^3.0.1",
+    "express": "^4.18.2",
     "framer-motion": "^11.11.10",
     "parser": "^0.1.4",
     "react": "^18.3.1",
